--- a/src/main/java/com/ignacio/proyectosensores/GUI/metadata/JPMetaTag.form
+++ b/src/main/java/com/ignacio/proyectosensores/GUI/metadata/JPMetaTag.form
@@ -115,6 +115,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Historial de fallas"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel6">
       <Properties>
