Se agregan eliminaciones y error por restriccion a esa eliminacion

--- a/src/main/java/com/ignacio/proyectosensores/GUI/creaciones/JPCrearLugar.form
+++ b/src/main/java/com/ignacio/proyectosensores/GUI/creaciones/JPCrearLugar.form
@@ -77,6 +77,9 @@
               </Table>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="t_lugaresKeyReleased"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
