--- a/src/main/java/com/ignacio/proyectosensores/GUI/creaciones/JPCrearMaquina.form
+++ b/src/main/java/com/ignacio/proyectosensores/GUI/creaciones/JPCrearMaquina.form
@@ -169,6 +169,9 @@
               <Connection code="new MaquinaTableModel()" type="code"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="t_maquinasKeyReleased"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
