--- a/src/main/java/com/ignacio/proyectosensores/GUI/creaciones/JPCrearTag.form
+++ b/src/main/java/com/ignacio/proyectosensores/GUI/creaciones/JPCrearTag.form
@@ -202,6 +202,9 @@
               <Table columnCount="0" rowCount="0"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="t_vistaKeyReleased"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
