--- a/src/main/java/com/ignacio/proyectosensores/GUI/creaciones/JPCrearTipoSensor.form
+++ b/src/main/java/com/ignacio/proyectosensores/GUI/creaciones/JPCrearTipoSensor.form
@@ -72,6 +72,9 @@
               <Connection code="new TipoSensorTableModel()" type="code"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="t_vistaKeyReleased"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
