--- a/src/main/java/com/ignacio/proyectosensores/GUI/creaciones/JPCrearProtocolo.form
+++ b/src/main/java/com/ignacio/proyectosensores/GUI/creaciones/JPCrearProtocolo.form
@@ -77,6 +77,9 @@
               <Connection code="new ProtocoloTableModel()" type="code"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="t_protocoloKeyReleased"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
